--- a/templates/home.html
+++ b/templates/home.html
@@ -14,4 +14,14 @@
     <a href="{% url 'account_login' %}">Log In</a>
     <a href="{% url 'account_signup' %}">Sign Up</a>
   {% endif %}
+  <form class="form-inline mt-2 mt-md-0" action="{% url 'search_results' %}" method="GET">
+    <input
+      type="text"
+      name="q"
+      class="form-control mr-sm-2"
+      type="text"
+      placeholder="Search"
+      aria-label="Search"
+    />
+  </form>
 {% endblock content %}
